# tt-challenge

./: .env.example  Dockerfile  README copy.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
src/: config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py
src/api/v1/: api.py
src/api/v1/endpoints/: projects.py  tasks.py
src/services/: project_service.py  task_service.py
tests/: conftest.py  test_projects.py  test_tasks.py
